# InventoryManagementApp

./: README.md
backend/: README.md  config.py  pyproject.toml  run.py
backend/app/: __init__.py  models.py  routes.py
backend/src/: main.py
backend/tests/: client.py  test_add_item.py  test_get_filtered_items.py  test_get_items.py
database/: docker-compose.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: InventoryForm.tsx  InventoryList.tsx  InventoryManager.tsx
frontend/src/types/: inventory.types.ts
